hphp/test/zend/good/Zend/tests/bug48667_1.php.expectf

Fatal error: Class A cannot implement both IteratorAggregate and Iterator at the same time in %s/bug48667_1.php on line 3
